slider speed issue in mobile ---done block chain --> Blockchain ---done home page services card mobile responsive issues---done home page world section align in center issue---done home page technology section card image color issue on hover--done

--- a/public/assets/scss/layout/pages/_category.scss
+++ b/public/assets/scss/layout/pages/_category.scss
@@ -104,6 +104,9 @@
                     opacity: 1;
                 }
             }
+              & img{
+               filter: brightness(0) invert(1);
+            }
             & .tp-category-content-title{
                 color: var(--tp-common-white);
             }
